--- a/index.html
+++ b/index.html
@@ -29,6 +29,24 @@ function WinOpen_z7()
                { 
 window.open("z7_sliu.html","okienko_z7","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
                }
+ function WinOpen_z8()  
+               { 
+window.open("z8_sliu.html","okienko_8","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+function WinOpen_z9()  
+               { 
+window.open("z9_sliu.html","okienko_z9","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+function WinOpen_z10()  
+               { 
+window.open("z10_sliu.html","okienko_z10","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+function WinOpen_z11()  
+               { 
+window.open("z11_sliu.html","okienko_z11","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }			  
+
+
 function okno_zamknij()  
                        { 
                              window.close() 
@@ -46,5 +64,6 @@ function okno_zamknij()
         <input type="button" value="zamknij okno" onclick="okno_zamknij()"/> 
     </form> 
 </body> 
+
 
 </html>
