--- a/index.html
+++ b/index.html
@@ -61,9 +61,14 @@ function okno_zamknij()
         <input type="button_z4" name="zadanie4" value="zadanie4-Sliusarenko" onclick="WinOpen_z4(' ')"> 
         <input type="button_z5" name="zadanie5" value="zadanie5-Sliusarenko" onclick="WinOpen_z5(' ')"> 
 	    <input type="button_z7" name="zadanie7" value="zadanie7-Sliusarenko" onclick="WinOpen_z5(' ')"> 
+	    <input type="button_z8" name="zadanie7" value="zadanie8-Sliusarenko" onclick="WinOpen_z5(' ')">
+	    <input type="button_z9" name="zadanie9" value="zadanie9-Sliusarenko" onclick="WinOpen_z5(' ')">
+	    <input type="button_z10" name="zadanie10" value="zadanie10-Sliusarenko" onclick="WinOpen_z5(' ')">
+	    <input type="button_z11" name="zadanie11" value="zadanie11-Sliusarenko" onclick="WinOpen_z5(' ')">
         <input type="button" value="zamknij okno" onclick="okno_zamknij()"/> 
     </form> 
 </body> 
 
 
 </html>
+
