--- a/index.html
+++ b/index.html
@@ -44,7 +44,20 @@ window.open("z10_sliu.html","okienko_z10","toolbar=no,directories=no,menubar=no,
 function WinOpen_z11()  
                { 
 window.open("z11_sliu.html","okienko_z11","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
-               }			  
+               }	
+			  function WinOpen_z11kod()  
+               { 
+window.open("z11_sliu_kod.html","okienko_z11_kod","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+			  function WinOpen_z11kod()  
+               { 
+window.open("z12_sliu.html","okienko_z12","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+			  function WinOpen_z12kod()  
+               { 
+window.open("z12_sliu_kod.html","okienko_z12_kod","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+			  
 
 
 function okno_zamknij()  
@@ -65,11 +78,14 @@ function okno_zamknij()
 	    <input type="button_z9" name="zadanie9" value="zadanie9-Sliusarenko" onclick="WinOpen_z9(' ')">
 	    <input type="button_z10" name="zadanie10" value="zadanie10-Sliusarenko" onclick="WinOpen_z10(' ')">
 	    <input type="button_z11" name="zadanie11" value="zadanie11-Sliusarenko" onclick="WinOpen_z11(' ')">
+	    <input type="button_z11kod" name="zadanie11_kod" value="zadanie11_kod-Sliusarenko" onclick="WinOpen_z11_kod(' ')">
+	    <input type="button_z12kod" name="zadanie12_kod" value="zadanie12_kod-Sliusarenko" onclick="WinOpen_z12(' ')">
         <input type="button" value="zamknij okno" onclick="okno_zamknij()"/> 
     </form> 
 </body> 
 
 
 </html>
+
 
 
