--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ window.open("z11_sliu.html","okienko_z11","toolbar=no,directories=no,menubar=no,
                { 
 window.open("z11_sliu_kod.html","okienko_z11_kod","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
                }
-			  function WinOpen_z12_kod()  
+			  function WinOpen_z12()  
                { 
 window.open("z12_sliu.html","okienko_z12","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
                }
@@ -57,6 +57,11 @@ window.open("z12_sliu.html","okienko_z12","toolbar=no,directories=no,menubar=no,
                { 
 window.open("z12_sliu_kod.html","okienko_z12_kod","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
                }
+			  function WinOpen_z13()  
+               { 
+window.open("z13_sliu.html","okienko_z13","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400");
+               }
+			  
 			  
 
 
@@ -81,12 +86,14 @@ function okno_zamknij()
 	    <input type="button_z11kod" name="zadanie11_kod" value="zadanie11_kod-Sliusarenko" onclick="WinOpen_z11_kod(' ')">
 	    <input type="button_z12" name="zadanie12" value="zadanie12-Sliusarenko" onclick="WinOpen_z12(' ')">
 	    <input type="button_z12kod" name="zadanie12_kod" value="zadanie12_kod-Sliusarenko" onclick="WinOpen_z12_kod(' ')">
+	   <input type="button_z13" name="zadanie13" value="zadanie13-Sliusarenko" onclick="WinOpen_z13(' ')">
         <input type="button" value="zamknij okno" onclick="okno_zamknij()"/> 
     </form> 
 </body> 
 
 
 </html>
+
 
 
 
