--- a/index.html
+++ b/index.html
@@ -61,6 +61,14 @@ window.open("z12_sliu_kod.html","okienko_z12_kod","toolbar=no,directories=no,men
                { 
 window.open("z13_sliu.html","okienko_z13","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400");
                }
+			   function WinOpen_z14()  
+               { 
+window.open("z14_sliu.html","okienko_z14","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400");
+               }
+			   function WinOpen_z15()  
+               { 
+window.open("z15_sliu.html","okienko_z15","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400");
+               }
 			  
 			  
 
@@ -86,13 +94,15 @@ function okno_zamknij()
 	    <input type="button_z11kod" name="zadanie11_kod" value="zadanie11_kod-Sliusarenko" onclick="WinOpen_z11_kod(' ')">
 	    <input type="button_z12" name="zadanie12" value="zadanie12-Sliusarenko" onclick="WinOpen_z12(' ')">
 	    <input type="button_z12kod" name="zadanie12_kod" value="zadanie12_kod-Sliusarenko" onclick="WinOpen_z12_kod(' ')">
-	   <input type="button_z13" name="zadanie13" value="zadanie13-Sliusarenko" onclick="WinOpen_z13(' ')">
+	    <input type="button_z14" name="zadanie14" value="zadanie14-Sliusarenko" onclick="WinOpen_z14(' ')">
+	    <input type="button_z15" name="zadanie15" value="zadanie15-Sliusarenko" onclick="WinOpen_z15(' ')">
         <input type="button" value="zamknij okno" onclick="okno_zamknij()"/> 
     </form> 
 </body> 
 
 
 </html>
+
 
 
 
