--- a/index.html
+++ b/index.html
@@ -51,23 +51,31 @@ window.open("z11_sliu_kod.html","okienko_z11_kod","toolbar=no,directories=no,men
                }
 			  function WinOpen_z12()  
                { 
-window.open("z12_sliu.html","okienko_z12","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+window.open("zad12_sliu.html","okienko_z12","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
                }
 			  function WinOpen_z12_kod()  
                { 
-window.open("z12_sliu_kod.html","okienko_z12_kod","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+window.open("zad12_sliu_kod.html","okienko_z12_kod","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
                }
 			  function WinOpen_z13()  
                { 
-window.open("z13_sliu.html","okienko_z13","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400");
+window.open("zad13_sliu.html","okienko_z13","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400");
                }
 			   function WinOpen_z14()  
                { 
-window.open("z14_sliu.html","okienko_z14","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400");
+window.open("zad14_sliu.html","okienko_z14","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400");
                }
 			   function WinOpen_z15()  
                { 
-window.open("z15_sliu.html","okienko_z15","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400");
+window.open("zad15_sliu.html","okienko_z15","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400");
+               }
+			  function WinOpen_z16()  
+               { 
+window.open("zad16_sliu.html","okienko_z16","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400");
+               }
+			  function WinOpen_z16_kod()  
+               { 
+window.open("zad16_sliu_kod.html","okienko_z15","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400");
                }
 			  
 			  
@@ -96,12 +104,15 @@ function okno_zamknij()
 	    <input type="button_z12kod" name="zadanie12_kod" value="zadanie12_kod-Sliusarenko" onclick="WinOpen_z12_kod(' ')">
 	    <input type="button_z14" name="zadanie14" value="zadanie14-Sliusarenko" onclick="WinOpen_z14(' ')">
 	    <input type="button_z15" name="zadanie15" value="zadanie15-Sliusarenko" onclick="WinOpen_z15(' ')">
+	    <input type="button_z16" name="zadanie16" value="zadanie16-Sliusarenko" onclick="WinOpen_z16(' ')">
+	    <input type="button_z16kod" name="zadanie16_kod" value="zadanie16_kod-Sliusarenko" onclick="WinOpen_z16_kod(' ')">
         <input type="button" value="zamknij okno" onclick="okno_zamknij()"/> 
     </form> 
 </body> 
 
 
 </html>
+
 
 
 
