--- a/index.html
+++ b/index.html
@@ -1,100 +1,113 @@
 <html> 
-<head> 
-<title>Oleksandr Sliusarenko</title> 
-<p align="left"> <font color="red" size="7" face="Arial"> Szkielet zaliczeniowy JavaScript Oleksandr
-22 
- 23 
-Sliusarenko  2p </font> </p> <br>  
- <script language="JavaScript"> 
-function WinOpen_z3() 
- { 
-window.open("z3_sliu.html","okienko_z3","toolbar=no,directories=no,menubar=no,height=380,width
- =160,top=200,left=200"); 
- } 
-function WinOpen_z4() 
- { 
-window.open("z4_sliu.html","okienko_z4","toolbar=no,directories=no,menubar=no,height=380,width
- =160,top=200,left=400"); 
- } 
-function WinOpen_z5() 
- { 
-window.open("z5_sliu.html","okienko_z5","toolbar=no,directories=no,menubar=no,height=380,width
- =160,top=200,left=400"); 
- } 
-function WinOpen_z6() 
- { 
-window.open("z6_sliu.html","okienko_z6","toolbar=no,directories=no,menubar=no,height=380,width
- =160,top=200,left=400"); 
- } 
- function WinOpen_z7() 
- { 
-window.open("z7_sliu.html","okienko_z7","toolbar=no,directories=no,menubar=no,height=380,width
- =160,top=200,left=200"); 
- } 
-function WinOpen_z8() 
- { 
-window.open("z8_sliu.html","okienko_z8","toolbar=no,directories=no,menubar=no,height=380,width
- =160,top=200,left=400"); 
- } 
-function WinOpen_z9() 
- { 
-window.open("z9_sliu.html","okienko_z9","toolbar=no,directories=no,menubar=no,height=380,width
- =160,top=200,left=400"); 
- } 
-function WinOpen_z10() 
- { 
-window.open("z10_sliu.html","okienko_z10","toolbar=no,directories=no,menubar=no,height=380,wi
- dth=160,top=200,left=400"); 
- } 
-function WinOpen_z11() 
- { 
-window.open("z11_sliu.html","okienko_z11","toolbar=no,directories=no,menubar=no,height=380,wi
- dth=160,top=200,left=400"); 
- } 
-function WinOpen_z11_kod() 
- { 
-window.open("z11_sliu.html","okienko_z11_kod","toolbar=no,directories=no,menubar=no,height=3
- 80,width=160,top=200,left=400"); 
- } 
- function WinOpen_z12() 
- { 
-window.open("zad12_sliu.html","okienko_z12","toolbar=no,directories=no,menubar=no,height=380,wi
- dth=160,top=200,left=400"); 
- }
- 24   
- 
-function okno_zamknij() 
- { 
- window.close() 
- } 
- </script> 
- </head> 
+     <head> 
+            <title> Oleksandr Sliusarenko 2P</title> 
+          <script language="JavaScript"> 
+		  document.write("Szkielet zaliczeniowy JavaScript Sliusarenko Oleksandr 2P".fontcolor("pink").fontsize(7)+"<br>");
+function WinOpen_z1()  
+               { 
+window.open("z1_sliu.html","okienko_z1","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+function WinOpen_z2()  
+               { 
+window.open("z2_sliu.html","okienko_z2","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+      function WinOpen_z3()  
+               { 
+window.open("z3_sliu.html","okienko_z3","toolbar=no,directories=no,menubar=no,height=200,width=250,top=200,left=200"); 
+               } 
+function WinOpen_z4()  
+               { 
+window.open("z4_sliu.html","okienko_z4","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+function WinOpen_z5()  
+               { 
+window.open("z5_sliu.html","okienko_z5","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+
+
+function WinOpen_z7()  
+               { 
+window.open("z7_sliu.html","okienko_z7","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+ function WinOpen_z8()  
+               { 
+window.open("z8_sliu.html","okienko_8","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+function WinOpen_z9()  
+               { 
+window.open("z9_sliu.html","okienko_z9","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+function WinOpen_z10()  
+               { 
+window.open("z10_sliu.html","okienko_z10","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+function WinOpen_z11()  
+               { 
+window.open("z11_sliu.html","okienko_z11","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }	
+			  function WinOpen_z11_kod()  
+               { 
+window.open("z11_sliu_kod.html","okienko_z11_kod","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+			  function WinOpen_z12()  
+               { 
+window.open("zad12_sliu.html","okienko_z12","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+			  function WinOpen_z12_kod()  
+               { 
+window.open("zad12_sliu_kod.html","okienko_z12_kod","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+			   function WinOpen_z13()  
+               { 
+window.open("zad13_sliu.html","okienko_z13","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+			   function WinOpen_z14()  
+               { 
+window.open("zadanie14_sliu.html","okienko_z14","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+			   function WinOpen_z15()  
+               { 
+window.open("zadanie15_sliu.html","okienko_z15","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+			   function WinOpen_z20()  
+               { 
+window.open("zadanie20_sliu.html","okienko_z20","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+			  
+
+
+function okno_zamknij()  
+                       { 
+                             window.close() 
+                       } 
+          </script> 
+      </head> 
 <body> 
- <form> 
- <input type="button" name="z3" value="z3_sliu" onclick="WinOpen_z3(' ')"> <br><br> 
-<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
- <input type="button" name="z4" value="z4_sliu" onclick="WinOpen_z4(' ')"> <br><br> 
-<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
- <input type="button" name="z5" value="z5_sliu" onclick="WinOpen_z5(' ')"> <br><br> 
-<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
- <input type="button" name="z6" value="z6_sliu" onclick="WinOpen_z6(' ')"> <br><br> 
-<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
- <input type="button" name="z7" value="z7_sliu" onclick="WinOpen_z7(' ')"> <br><br> 
-<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
- <input type="button" name="z8" value="z8_sliu" onclick="WinOpen_z8(' ')"> <br><br> 
-<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
- <input type="button" name="z9" value="z9_sliu" onclick="WinOpen_z9(' ')"> <br><br> 
-<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
- <input type="button" name="z10" value="z10_sliu" onclick="WinOpen_z10(' ')"> <br><br> 
-<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
- <input type="button" name="z11" value="z11_sliu" onclick="WinOpen_z11(' ')"> 
- <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
- <input type="button" name="z11" value="z11_sliu_kod" onclick="WinOpen_z11_kod(' ')"> 
-<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
- <input type="button" name="z12" value="zad12_sliu" onclick="WinOpen_z12(' ')">
-<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
-<br><br> 
-<input type="button" value="zamknij okno" onclick="okno_zamknij()"/> 
- </form> 
+   <form> 
+     <input type="button_z1" name="zadanie1" value="zadanie1-Sliusarenko" onclick="WinOpen_z1(' ')"> 
+     <input type="button_z2" name="zadanie2" value="zadanie2-Sliusarenko" onclick="WinOpen_z2(' ')"> 
+     <input type="button_z3" name="zadanie3" value="zadanie3-Sliusarenko" onclick="WinOpen_z3(' ')"> 
+     <input type="button_z4" name="zadanie4" value="zadanie4-Sliusarenko" onclick="WinOpen_z4(' ')"> 
+     <input type="button_z5" name="zadanie5" value="zadanie5-Sliusarenko" onclick="WinOpen_z5(' ')"> 
+	    <input type="button_z7" name="zadanie7" value="zadanie7-Sliusarenko" onclick="WinOpen_z7(' ')"> 
+	    <input type="button_z8" name="zadanie7" value="zadanie8-Sliusarenko" onclick="WinOpen_z8(' ')">
+	    <input type="button_z9" name="zadanie9" value="zadanie9-Sliusarenko" onclick="WinOpen_z9(' ')">
+	    <input type="button_z10" name="zadanie10" value="zadanie10-Sliusarenko" onclick="WinOpen_z10(' ')">
+	    <input type="button_z11" name="zadanie11" value="zadanie11-Sliusarenko" onclick="WinOpen_z11(' ')">
+	    <input type="button_z11kod" name="zadanie11_kod" value="zadanie11_kod-Sliusarenko" onclick="WinOpen_z11_kod(' ')">
+	    <input type="button_z12" name="zadanie12" value="zadanie12-Sliusarenko" onclick="WinOpen_z12(' ')">
+	    <input type="button_z12kod" name="zadanie12_kod" value="zadanie12_kod-Sliusarenko" onclick="WinOpen_z12_kod(' ')">
+	    <input type="button_z13" name="zadanie13" value="zadanie13-Sliusarenko" onclick="WinOpen_z13(' ')">
+	    <input type="button_z14" name="zadanie14" value="zadanie14-Sliusarenko" onclick="WinOpen_z14(' ')">
+	    <input type="button_z15" name="zadanie15" value="zadanie15-Sliusarenko" onclick="WinOpen_z15(' ')">
+	    <input type="button_z20" name="zadanie20" value="zadanie20-Sliusarenko" onclick="WinOpen_z20(' ')">
+        <input type="button" value="zamknij okno" onclick="okno_zamknij()"/> 
+    </form> 
 </body> 
-</html> 
+
+
+</html>
+
+
+
+
