--- a/index.html
+++ b/index.html
@@ -73,6 +73,22 @@ window.open("zadanie15_sliu.html","okienko_z15","toolbar=no,directories=no,menub
                { 
 window.open("zadanie20_sliu.html","okienko_z20","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
                }
+			  function WinOpen_z21()  
+               { 
+window.open("zad21_sliu.html","okienko_z21","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+			  function WinOpen_z22()  
+               { 
+window.open("zad22_sliu.html","okienko_z22","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+			  function WinOpen_z23()  
+               { 
+window.open("zad23_sliu.html","okienko_z23","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+			  function WinOpen_z24()  
+               { 
+window.open("zad24_sliu.html","okienko_z24","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
 			  
 
 
@@ -101,12 +117,17 @@ function okno_zamknij()
 	    <input type="button_z14" name="zadanie14" value="zadanie14-Sliusarenko" onclick="WinOpen_z14(' ')">
 	    <input type="button_z15" name="zadanie15" value="zadanie15-Sliusarenko" onclick="WinOpen_z15(' ')">
 	    <input type="button_z20" name="zadanie20" value="zadanie20-Sliusarenko" onclick="WinOpen_z20(' ')">
+	    <input type="button_z21" name="zadanie21" value="zadanie21-Sliusarenko" onclick="WinOpen_z21(' ')">
+	    <input type="button_z22" name="zadanie22" value="zadanie22-Sliusarenko" onclick="WinOpen_z22(' ')">
+	    <input type="button_z23" name="zadanie23" value="zadanie23-Sliusarenko" onclick="WinOpen_z23(' ')">
+	    <input type="button_z24" name="zadanie24" value="zadanie24-Sliusarenko" onclick="WinOpen_z24(' ')">
         <input type="button" value="zamknij okno" onclick="okno_zamknij()"/> 
     </form> 
 </body> 
 
 
 </html>
+
 
 
 
