--- a/index.html
+++ b/index.html
@@ -69,9 +69,33 @@ window.open("zadanie14_sliu.html","okienko_z14","toolbar=no,directories=no,menub
                { 
 window.open("zadanie15_sliu.html","okienko_z15","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
                }
+			   function WinOpen_z16()  
+               { 
+window.open("zad16_sliu.html","okienko_z16","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+			  function WinOpen_z16_kod()  
+               { 
+window.open("zad16_sliu_kod.html","okienko_z16_kod","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+			  function WinOpen_z17()  
+               { 
+window.open("zad17_sliu.html","okienko_z17","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+			  function WinOpen_z17_kod()  
+               { 
+window.open("zad17_kod_sliu.html","okienko_z17_kod","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+			  function WinOpen_z18()  
+               { 
+window.open("zad18_sliu.html","okienko_z18","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+			  function WinOpen_z18_kod()  
+               { 
+window.open("zad18_sliu.html","okienko_z18_kod","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
 			   function WinOpen_z20()  
                { 
-window.open("zadanie20_sliu.html","okienko_z20","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+window.open("zad20_sliu.html","okienko_z20","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
                }
 			  function WinOpen_z21()  
                { 
@@ -116,6 +140,12 @@ function okno_zamknij()
 	    <input type="button_z13" name="zadanie13" value="zadanie13-Sliusarenko" onclick="WinOpen_z13(' ')">
 	    <input type="button_z14" name="zadanie14" value="zadanie14-Sliusarenko" onclick="WinOpen_z14(' ')">
 	    <input type="button_z15" name="zadanie15" value="zadanie15-Sliusarenko" onclick="WinOpen_z15(' ')">
+	    <input type="button_z16" name="zadanie16" value="zadanie16-Sliusarenko" onclick="WinOpen_z16(' ')"
+		<input type="button_z16kod" name="zadanie16_kod" value="zadanie16_kod-Sliusarenko" onclick="WinOpen_z16_kod(' ')"
+		<input type="button_z17" name="zadanie17" value="zadanie17-Sliusarenko" onclick="WinOpen_z17(' ')"
+		<input type="button_z17kod" name="zadanie17_kod" value="zadanie17_kod-Sliusarenko" onclick="WinOpen_z17_kod(' ')"
+		<input type="button_z18" name="zadanie18" value="zadanie18-Sliusarenko" onclick="WinOpen_z18(' ')"
+		<input type="button_z18kod" name="zadanie18_kod" value="zadanie18_kod-Sliusarenko" onclick="WinOpen_z18_kod(' ')"
 	    <input type="button_z20" name="zadanie20" value="zadanie20-Sliusarenko" onclick="WinOpen_z20(' ')">
 	    <input type="button_z21" name="zadanie21" value="zadanie21-Sliusarenko" onclick="WinOpen_z21(' ')">
 	    <input type="button_z22" name="zadanie22" value="zadanie22-Sliusarenko" onclick="WinOpen_z22(' ')">
@@ -127,6 +157,7 @@ function okno_zamknij()
 
 
 </html>
+
 
 
 
