--- a/index.html
+++ b/index.html
@@ -113,6 +113,10 @@ window.open("zad23_sliu.html","okienko_z23","toolbar=no,directories=no,menubar=n
                { 
 window.open("zad24_sliu.html","okienko_z24","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
                }
+			  function WinOpen_z27()  
+               { 
+window.open("zad27_sliu.html","okienko_z27","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
 			  
 
 
@@ -151,12 +155,14 @@ function okno_zamknij()
 	    <input type="button_z22" name="zadanie22" value="zadanie22-Sliusarenko" onclick="WinOpen_z22(' ')">
 	    <input type="button_z23" name="zadanie23" value="zadanie23-Sliusarenko" onclick="WinOpen_z23(' ')">
 	    <input type="button_z24" name="zadanie24" value="zadanie24-Sliusarenko" onclick="WinOpen_z24(' ')">
+	    <input type="button_z27" name="zadanie27" value="zadanie27-Sliusarenko" onclick="WinOpen_z27(' ')">
         <input type="button" value="zamknij okno" onclick="okno_zamknij()"/> 
     </form> 
 </body> 
 
 
 </html>
+
 
 
 
