--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ window.open("zad18_sliu.html","okienko_z18","toolbar=no,directories=no,menubar=n
                }
 			  function WinOpen_z18_kod()  
                { 
-window.open("zad18_sliu.html","okienko_z18_kod","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+window.open("zad18_sliu_kod.html","okienko_z18_kod","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
                }
 			   function WinOpen_z20()  
                { 
@@ -162,6 +162,7 @@ function okno_zamknij()
 
 
 </html>
+
 
 
 
