--- a/index.html
+++ b/index.html
@@ -145,11 +145,11 @@ function okno_zamknij()
 	    <input type="button_z14" name="zadanie14" value="zadanie14-Sliusarenko" onclick="WinOpen_z14(' ')">
 	    <input type="button_z15" name="zadanie15" value="zadanie15-Sliusarenko" onclick="WinOpen_z15(' ')">
 	    <input type="button_z16" name="zadanie16" value="zadanie16-Sliusarenko" onclick="WinOpen_z16(' ')"
-		<input type="button_z16kod" name="zadanie16_kod" value="zadanie16_kod-Sliusarenko" onclick="WinOpen_z16_kod(' ')">
+		<input type="button_z16_kod" name="zadanie16_kod" value="zadanie16_kod-Sliusarenko" onclick="WinOpen_z16_kod(' ')">
 		<input type="button_z17" name="zadanie17" value="zadanie17-Sliusarenko" onclick="WinOpen_z17(' ')"
 		<input type="button_z17kod" name="zadanie17_kod" value="zadanie17_kod-Sliusarenko" onclick="WinOpen_z17_kod(' ')">
 		<input type="button_z18" name="zadanie18" value="zadanie18-Sliusarenko" onclick="WinOpen_z18(' ')"
-		<input type="button_z18kod" name="zadanie18_kod" value="zadanie18_kod-Sliusarenko" onclick="WinOpen_z18_kod(' ')">
+		<input type="button_z18_kod" name="zadanie18_kod" value="zadanie18_kod-Sliusarenko" onclick="WinOpen_z18_kod(' ')">
 	    <input type="button_z20" name="zadanie20" value="zadanie20-Sliusarenko" onclick="WinOpen_z20(' ')">
 	    <input type="button_z21" name="zadanie21" value="zadanie21-Sliusarenko" onclick="WinOpen_z21(' ')">
 	    <input type="button_z22" name="zadanie22" value="zadanie22-Sliusarenko" onclick="WinOpen_z22(' ')">
@@ -162,6 +162,7 @@ function okno_zamknij()
 
 
 </html>
+
 
 
 
