--- a/index.html
+++ b/index.html
@@ -117,6 +117,34 @@ window.open("zad24_sliu.html","okienko_z24","toolbar=no,directories=no,menubar=n
                { 
 window.open("zad27_sliu.html","okienko_z27","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
                }
+			  function WinOpen_z29()  
+               { 
+window.open("zad29_sliu.html","okienko_z29","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+			  function WinOpen_z30()  
+               { 
+window.open("zad30_sliu.html","okienko_z30","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+			  function WinOpen_z30_kod()  
+               { 
+window.open("zad30_kod_sliu.html","okienko_z30_kod","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+			  function WinOpen_z31()  
+               { 
+window.open("zad31_sliu.html","okienko_z31","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+			  function WinOpen_z31_kod()  
+               { 
+window.open("zad31_kod_sliu.html","okienko_z31_kod","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+			  function WinOpen_z32()  
+               { 
+window.open("zad32_sliu.html","okienko_z32","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+			  function WinOpen_z32_kod()  
+               { 
+window.open("zad32_kod_sliu.html","okienko_z32_kod","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
 			  
 
 
@@ -156,12 +184,20 @@ function okno_zamknij()
 	    <input type="button_z23" name="zadanie23" value="zadanie23-Sliusarenko" onclick="WinOpen_z23(' ')">
 	    <input type="button_z24" name="zadanie24" value="zadanie24-Sliusarenko" onclick="WinOpen_z24(' ')">
 	    <input type="button_z27" name="zadanie27" value="zadanie27-Sliusarenko" onclick="WinOpen_z27(' ')">
+	    <input type="button_z29" name="zadanie29" value="zadanie29-Sliusarenko" onclick="WinOpen_z29(' ')">
+	    <input type="button_z30" name="zadanie30" value="zadanie30-Sliusarenko" onclick="WinOpen_z30(' ')">
+	    <input type="button_z30_kod" name="zadanie30_kod" value="zadanie30_kod-Sliusarenko" onclick="WinOpen_z30_kod(' ')">
+	    <input type="button_z31" name="zadanie31" value="zadanie31-Sliusarenko" onclick="WinOpen_z31(' ')">
+	    <input type="button_z31_kod" name="zadanie31_kod" value="zadanie31_kod-Sliusarenko" onclick="WinOpen_z31_kod(' ')">
+	    <input type="button_z32" name="zadanie32" value="zadanie32-Sliusarenko" onclick="WinOpen_z32(' ')">
+	    <input type="button_z32_kod" name="zadanie32_kod" value="zadanie32_kod-Sliusarenko" onclick="WinOpen_z32_kod(' ')">
         <input type="button" value="zamknij okno" onclick="okno_zamknij()"/> 
     </form> 
 </body> 
 
 
 </html>
+
 
 
 
