--- a/index.html
+++ b/index.html
@@ -145,6 +145,18 @@ window.open("zad32_sliu.html","okienko_z32","toolbar=no,directories=no,menubar=n
                { 
 window.open("zad32_kod_sliu.html","okienko_z32_kod","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
                }
+			  function WinOpen_z38()  
+               { 
+window.open("zad38_sliu.html","okienko_z38","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+			  function WinOpen_z39()  
+               { 
+window.open("zad39_sliu.html","okienko_z39","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+			  function WinOpen_z40()  
+               { 
+window.open("zad40_sliu.html","okienko_z40","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
 			  
 
 
@@ -191,12 +203,17 @@ function okno_zamknij()
 	    <input type="button_z31_kod" name="zadanie31_kod" value="zadanie31_kod-Sliusarenko" onclick="WinOpen_z31_kod(' ')">
 	    <input type="button_z32" name="zadanie32" value="zadanie32-Sliusarenko" onclick="WinOpen_z32(' ')">
 	    <input type="button_z32_kod" name="zadanie32_kod" value="zadanie32_kod-Sliusarenko" onclick="WinOpen_z32_kod(' ')">
+	    <input type="button_z38" name="zadanie38" value="zadanie38-Sliusarenko" onclick="WinOpen_z38(' ')">
+	    <input type="button_z39" name="zadanie39" value="zadanie39-Sliusarenko" onclick="WinOpen_z39(' ')">
+	    <input type="button_z40" name="zadanie39" value="zadanie40-Sliusarenko" onclick="WinOpen_z40(' ')">
+	   
         <input type="button" value="zamknij okno" onclick="okno_zamknij()"/> 
     </form> 
 </body> 
 
 
 </html>
+
 
 
 
