--- a/index.html
+++ b/index.html
@@ -157,6 +157,22 @@ window.open("zad39_sliu.html","okienko_z39","toolbar=no,directories=no,menubar=n
                { 
 window.open("zad40_sliu.html","okienko_z40","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
                }
+			  function WinOpen_z41()  
+               { 
+window.open("zad41_sliu.html","okienko_z41","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+			  function WinOpen_z41_kod()  
+               { 
+window.open("zad41_kod_sliu.html","okienko_z41_kod","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+			  function WinOpen_z42()  
+               { 
+window.open("zad42_sliu.html","okienko_z42","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+			  function WinOpen_z42_kdo()  
+               { 
+window.open("zad42_kod_sliu.html","okienko_z42_kod","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
 			  
 
 
@@ -205,7 +221,11 @@ function okno_zamknij()
 	    <input type="button_z32_kod" name="zadanie32_kod" value="zadanie32_kod-Sliusarenko" onclick="WinOpen_z32_kod(' ')">
 	    <input type="button_z38" name="zadanie38" value="zadanie38-Sliusarenko" onclick="WinOpen_z38(' ')">
 	    <input type="button_z39" name="zadanie39" value="zadanie39-Sliusarenko" onclick="WinOpen_z39(' ')">
-	    <input type="button_z40" name="zadanie39" value="zadanie40-Sliusarenko" onclick="WinOpen_z40(' ')">
+	    <input type="button_z40" name="zadanie40" value="zadanie40-Sliusarenko" onclick="WinOpen_z40(' ')">
+	    <input type="button_z41" name="zadanie41" value="zadanie41-Sliusarenko" onclick="WinOpen_z41(' ')">
+	    <input type="button_z41_kod" name="zadanie41_kod" value="zadanie41_kod-Sliusarenko" onclick="WinOpen_z41_kod(' ')">\
+	    <input type="button_z42" name="zadanie42" value="zadanie42-Sliusarenko" onclick="WinOpen_z42(' ')">
+	    <input type="button_z42_kod" name="zadanie42_kod" value="zadanie42_kod-Sliusarenko" onclick="WinOpen_z42_kod(' ')">
 	   
         <input type="button" value="zamknij okno" onclick="okno_zamknij()"/> 
     </form> 
@@ -213,18 +233,6 @@ function okno_zamknij()
 
 
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
