--- a/index.html
+++ b/index.html
@@ -173,6 +173,18 @@ window.open("zad42_sliu.html","okienko_z42","toolbar=no,directories=no,menubar=n
                { 
 window.open("zad42_kod_sliu.html","okienko_z42_kod","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
                }
+			  function WinOpen_z47()  
+               { 
+window.open("zad47_sliu.html","okienko_z47","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+			  function WinOpen_z48()  
+               { 
+window.open("zad48_sliu.html","okienko_z48","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+			  function WinOpen_z49()  
+               { 
+window.open("zad49_sliu.html","okienko_z49","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
 			  
 
 
@@ -226,13 +238,16 @@ function okno_zamknij()
 	    <input type="button_z41_kod" name="zadanie41_kod" value="zadanie41_kod-Sliusarenko" onclick="WinOpen_z41_kod(' ')">\
 	    <input type="button_z42" name="zadanie42" value="zadanie42-Sliusarenko" onclick="WinOpen_z42(' ')">
 	    <input type="button_z42_kod" name="zadanie42_kod" value="zadanie42_kod-Sliusarenko" onclick="WinOpen_z42_kod(' ')">
-	   
+	    <input type="button_z47" name="zadanie47" value="zadanie47-Sliusarenko" onclick="WinOpen_z47(' ')">
+	    <input type="button_z48" name="zadanie48" value="zadanie48-Sliusarenko" onclick="WinOpen_z48(' ')">
+	    <input type="button_z49" name="zadanie49" value="zadanie49-Sliusarenko" onclick="WinOpen_z49(' ')">
         <input type="button" value="zamknij okno" onclick="okno_zamknij()"/> 
     </form> 
 </body> 
 
 
 </html>
+
 
 
 
