Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ window.open("zad41_kod_sliu.html","okienko_z41_kod","toolbar=no,directories=no,m
                { 
 window.open("zad42_sliu.html","okienko_z42","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
                }
-			  function WinOpen_z42_kdo()  
+			  function WinOpen_z42_kod()  
                { 
 window.open("zad42_kod_sliu.html","okienko_z42_kod","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
                }
@@ -177,13 +177,73 @@ window.open("zad42_kod_sliu.html","okienko_z42_kod","toolbar=no,directories=no,m
                { 
 window.open("zad47_sliu.html","okienko_z47","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
                }
+			  function WinOpen_z47_kod()  
+               { 
+window.open("zad47_kod_sliu.html","okienko_z47_kod","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
 			  function WinOpen_z48()  
                { 
 window.open("zad48_sliu.html","okienko_z48","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
                }
-			  function WinOpen_z49()  
+			  function WinOpen_z48_kod()  
+               { 
+window.open("zad48_kod_sliu.html","okienko_z48_kod","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+			  function WinOpen_z49()
                { 
 window.open("zad49_sliu.html","okienko_z49","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+			  function WinOpen_z49_kod()  
+               { 
+window.open("zad49_kod_sliu.html","okienko_z49_kod","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+			  function WinOpen_z50()  
+               { 
+window.open("zad50_sliu.html","okienko_z50","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+			  function WinOpen_z50_kod()  
+               { 
+window.open("zad50_kod_sliu.html","okienko_z50_kod","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+			  function WinOpen_z51()  
+               { 
+window.open("zad51_sliu.html","okienko_z51","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+			  function WinOpen_z51_kod()  
+               { 
+window.open("zad51_kod_sliu.html","okienko_z51_kod","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+			  function WinOpen_z52()  
+               { 
+window.open("zad52_sliu.html","okienko_z52","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+			  function WinOpen_z52_kod()  
+               { 
+window.open("zad52_kod_sliu.html","okienko_z52_kod","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+			  function WinOpen_z53()  
+               { 
+window.open("zad53_sliu.html","okienko_z53","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+			  function WinOpen_z54()  
+               { 
+window.open("zad54_sliu.html","okienko_z54","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+			  function WinOpen_z55()  
+               { 
+window.open("zad55_sliu.html","okienko_z55","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+			  function WinOpen_z56()  
+               { 
+window.open("zad56_sliu.html","okienko_z56","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+			  function WinOpen_z57()  
+               { 
+window.open("zad57_sliu.html","okienko_z57","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+			  function WinOpen_z58()  
+               { 
+window.open("zad58_sliu.html","okienko_z58","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
                }
 			  
 
@@ -239,16 +299,23 @@ function okno_zamknij()
 	    <input type="button_z42" name="zadanie42" value="zadanie42-Sliusarenko" onclick="WinOpen_z42(' ')">
 	    <input type="button_z42_kod" name="zadanie42_kod" value="zadanie42_kod-Sliusarenko" onclick="WinOpen_z42_kod(' ')">
 	    <input type="button_z47" name="zadanie47" value="zadanie47-Sliusarenko" onclick="WinOpen_z47(' ')">
+	    <input type="button_z47_kod" name="zadanie47_kod" value="zadanie47_kod-Sliusarenko" onclick="WinOpen_z47_kod(' ')">
 	    <input type="button_z48" name="zadanie48" value="zadanie48-Sliusarenko" onclick="WinOpen_z48(' ')">
+	    <input type="button_z48_kod" name="zadanie48_kod" value="zadanie48_kod-Sliusarenko" onclick="WinOpen_z48_kod(' ')">
 	    <input type="button_z49" name="zadanie49" value="zadanie49-Sliusarenko" onclick="WinOpen_z49(' ')">
+	    <input type="button_z49_kod" name="zadanie49_kod" value="zadanie49_kod-Sliusarenko" onclick="WinOpen_z49_kod(' ')">
+	    <input type="button_z50" name="zadanie50" value="zadanie50-Sliusarenko" onclick="WinOpen_z50(' ')">
+	    <input type="button_z51_kod" name="zadanie51_kod" value="zadanie51_kod-Sliusarenko" onclick="WinOpen_z51_kod(' ')">
+	    <input type="button_z52" name="zadanie52" value="zadanie52-Sliusarenko" onclick="WinOpen_z52(' ')">
+	    <input type="button_z52_kod" name="zadanie52_kod" value="zadanie52_kod-Sliusarenko" onclick="WinOpen_z52_kod(' ')">
+	    <input type="button_z53" name="zadanie53" value="zadanie53-Sliusarenko" onclick="WinOpen_z53(' ')">
+	    <input type="button_z54" name="zadanie54" value="zadanie54-Sliusarenko" onclick="WinOpen_z54(' ')">
+	    <input type="button_z55" name="zadanie55" value="zadanie55-Sliusarenko" onclick="WinOpen_z55(' ')">
+	    <input type="button_z56" name="zadanie56" value="zadanie56-Sliusarenko" onclick="WinOpen_z56(' ')">
+	    <input type="button_z57" name="zadanie57" value="zadanie57-Sliusarenko" onclick="WinOpen_z57(' ')">
+	    <input type="button_z58" name="zadanie58" value="zadanie58-Sliusarenko" onclick="WinOpen_z58(' ')">
+	    <input type="button_z59" name="zadanie59" value="zadanie59-Sliusarenko" onclick="WinOpen_z59(' ')">
         <input type="button" value="zamknij okno" onclick="okno_zamknij()"/> 
     </form> 
 </body> 
-
-
 </html>
-
-
-
-
-
