Update print statement to say 'Goodbye World'

--- a/index.html
+++ b/index.html
@@ -149,6 +149,10 @@ window.open("zad32_kod_sliu.html","okienko_z32_kod","toolbar=no,directories=no,m
                { 
 window.open("zad38_sliu.html","okienko_z38","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
                }
+			  function WinOpen_z38_kod()  
+               { 
+window.open("zad38_kod_sliu.html","okienko_z38_kod","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
 			  function WinOpen_z39()  
                { 
 window.open("zad39_sliu.html","okienko_z39","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
@@ -156,6 +160,10 @@ window.open("zad39_sliu.html","okienko_z39","toolbar=no,directories=no,menubar=n
 			  function WinOpen_z40()  
                { 
 window.open("zad40_sliu.html","okienko_z40","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
+               }
+			  function WinOpen_z40_kod()  
+               { 
+window.open("zad40_kod_sliu.html","okienko_z40_kod","toolbar=no,directories=no,menubar=no,height=380,width=1250,top=200,left=400"); 
                }
 			  function WinOpen_z41()  
                { 
@@ -292,8 +300,10 @@ function okno_zamknij()
 	    <input type="button_z32" name="zadanie32" value="zadanie32-Sliusarenko" onclick="WinOpen_z32(' ')">
 	    <input type="button_z32_kod" name="zadanie32_kod" value="zadanie32_kod-Sliusarenko" onclick="WinOpen_z32_kod(' ')">
 	    <input type="button_z38" name="zadanie38" value="zadanie38-Sliusarenko" onclick="WinOpen_z38(' ')">
+	    <input type="button_z38_kod" name="zadanie38_kod" value="zadanie38_kod-Sliusarenko" onclick="WinOpen_z38_kod(' ')">
 	    <input type="button_z39" name="zadanie39" value="zadanie39-Sliusarenko" onclick="WinOpen_z39(' ')">
 	    <input type="button_z40" name="zadanie40" value="zadanie40-Sliusarenko" onclick="WinOpen_z40(' ')">
+	   <input type="button_z40_kod" name="zadanie40_kod" value="zadanie40_kod-Sliusarenko" onclick="WinOpen_z40_kod(' ')">\
 	    <input type="button_z41" name="zadanie41" value="zadanie41-Sliusarenko" onclick="WinOpen_z41(' ')">
 	    <input type="button_z41_kod" name="zadanie41_kod" value="zadanie41_kod-Sliusarenko" onclick="WinOpen_z41_kod(' ')">\
 	    <input type="button_z42" name="zadanie42" value="zadanie42-Sliusarenko" onclick="WinOpen_z42(' ')">
@@ -319,3 +329,4 @@ function okno_zamknij()
     </form> 
 </body> 
 </html>
+
